change create restaurent api

--- a/.env_local
+++ b/.env_local
@@ -23,12 +23,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=vivek.harmistechnology@gmail.com
-MAIL_PASSWORD=wlbddsrfsxwwkwmg
-MAIL_ENCRYPTION=tls
+MAIL_HOST=mail.foodzela.com
+MAIL_PORT=465
+MAIL_USERNAME=info@foodzela.com
+MAIL_PASSWORD=UaluF10HN1nyoO4S
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_NAME="${APP_NAME}"
 
 
