--- a/.env_live
+++ b/.env_live
@@ -25,12 +25,13 @@ REDIS_PORT=6379
 
 
 
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=vivek.harmistechnology@gmail.com
-MAIL_PASSWORD=wlbddsrfsxwwkwmg
-MAIL_ENCRYPTION=tls
+MAIL_HOST=mail.foodzela.com
+MAIL_PORT=465
+MAIL_USERNAME=info@foodzela.com
+MAIL_PASSWORD=UaluF10HN1nyoO4S
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
